--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MoonLog" parent="@style/Theme.AppCompat" />
+    <style name="Theme.MoonLog" parent="Theme.AppCompat" />
 
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/purple_200</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/moon_log</item>
-        <item name="postSplashScreenTheme">@style/Theme.MoonLog</item>
+        <item name="postSplashScreenTheme">@style/Theme.AppCompat</item>
     </style>
 
 </resources>
